fix overflow issue

--- a/src/app/main-view/rightbar/rightbar.component.scss
+++ b/src/app/main-view/rightbar/rightbar.component.scss
@@ -6,6 +6,8 @@
   display:inline-block;
   padding:15px 0;
   color:white;
+  overflow-x: hidden;
+
   .features{
     border-top: 1px solid rgba(145, 150, 156, 0.25);
     margin: 20px 0;
@@ -16,6 +18,7 @@
   }
     h1, p{
       padding:0;
+      display:inline-block;
       margin:25px 20px;
     }
     p{
